deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
spec:
  selector:
    app: radicale
  ports:
    - name: dav
      port: 5232
      targetPort: 5232
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      containers:
        - name: radicale
          image: tomsquest/docker-radicale
          ports:
            - name: dav
              containerPort: 5232
          volumeMounts:
            - name: collections
              mountPath: /data/collections
            - name: config
              mountPath: /config
      volumes:
        - name: collections
          persistentVolumeClaim:
            claimName: radicale-pvc
        - name: config
          configMap:
            name: radicale-config
